k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      component: client
  replicas: 1
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
      - name: client
        image: laurall974/cern-restaurant-client:latest
        ports:
        - containerPort: 3000
