k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      component: postgres
  replicas: 1
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes: 
        - name: postgres-storage 
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
        - name: initdb-script
          configMap:
            name: postgres-initdb
            items:
              - key: initdb.sql
                path: initdb.sql
      containers:
      - name: postgres
        image: postgres:16
        ports:
          - containerPort: 5432
        volumeMounts: 
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
          - name: initdb-script
            mountPath: /docker-entrypoint-initdb.d/initdb.sql
            subPath: initdb.sql
