k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      component: server
  replicas: 1
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: laurall974/cern-restaurant-server:latest
        ports:
        - containerPort: 8080
